assignmet one complete

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <div class="main_section">
       <div class="chat_section">
         <div id="chart"></div>
-        <div id="question"><h1></h1></div>
+        <div id="winner" class="winner"><h3></h3></div>
       </div>
       <div class="plyer_input_section">
-        <textarea id="playersTextarea" name="w3review" rows="4" cols="50">
-            At w3schools.com you will learn how to make a website. They offer free tutorials in all web development technologies.
-              </textarea>
+        <h3>Add Names</h3>
+        <textarea id="playersTextarea" name="w3review" rows="4" name="sitelink" cols="50">Rejaul Karim Shohag Mahabub Alam Rayhan </textarea>
       </div>
     </div>
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
